<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:ignore="Overdraw"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <include layout="@layout/view_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/form_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_4">

            <TextView
                android:id="@+id/scope_note"
                style="@style/TextAppearance.Up.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_4"
                android:paddingHorizontal="@dimen/space_1"
                android:visibility="gone" />

            <TextView
                style="@style/TextAppearance.Up.Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_type" />

            <de.mcmodersd.unipensum.ui.widget.UpSegmentedControl
                android:id="@+id/type_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Series scopes: the weekday. -->
            <LinearLayout
                android:id="@+id/weekday_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.Up.Section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_weekday" />

                <de.mcmodersd.unipensum.ui.widget.UpSegmentedControl
                    android:id="@+id/weekday_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Single session: the date, which is also how it is moved. -->
            <de.mcmodersd.unipensum.ui.widget.UpRow
                android:id="@+id/date_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                android:visibility="gone"
                app:upChevron="true"
                app:upTitle="@string/field_date" />

            <de.mcmodersd.unipensum.ui.widget.UpRow
                android:id="@+id/start_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                app:upChevron="true"
                app:upTitle="@string/field_start" />

            <de.mcmodersd.unipensum.ui.widget.UpRow
                android:id="@+id/end_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                app:upChevron="true"
                app:upTitle="@string/field_end" />

            <TextView
                android:id="@+id/time_error"
                style="@style/TextAppearance.Up.Error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/space_1"
                android:paddingTop="@dimen/space_1"
                android:visibility="gone" />

            <TextView
                style="@style/TextAppearance.Up.Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                android:text="@string/field_format" />

            <de.mcmodersd.unipensum.ui.widget.UpSegmentedControl
                android:id="@+id/mode_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/hybrid_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/space_1">

                <TextView
                    style="@style/TextAppearance.Up.Body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/field_hybrid" />

                <de.mcmodersd.unipensum.ui.widget.UpSwitch
                    android:id="@+id/hybrid_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/field_hybrid" />
            </LinearLayout>

            <de.mcmodersd.unipensum.ui.widget.UpTextField
                android:id="@+id/room_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                app:upLabel="@string/field_room" />

            <de.mcmodersd.unipensum.ui.widget.UpTextField
                android:id="@+id/link_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                app:upHint="https://"
                app:upLabel="@string/field_link" />

            <!-- Opens the lecturer list to choose from; lecturers are managed there and in the settings. -->
            <de.mcmodersd.unipensum.ui.widget.UpRow
                android:id="@+id/lecturer_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                app:upChevron="true"
                app:upTitle="@string/field_lecturer" />

            <TextView
                style="@style/TextAppearance.Up.Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                android:text="@string/field_reminder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/space_1">

                <TextView
                    style="@style/TextAppearance.Up.Body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reminder_switch" />

                <de.mcmodersd.unipensum.ui.widget.UpSwitch
                    android:id="@+id/reminder_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/reminder_switch" />
            </LinearLayout>

            <de.mcmodersd.unipensum.ui.widget.UpStepper
                android:id="@+id/reminder_stepper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2" />

            <!-- Shown while the reminder is on but the app may not show notifications. -->
            <de.mcmodersd.unipensum.ui.widget.UpRow
                android:id="@+id/notifications_off_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:visibility="gone"
                app:upChevron="true"
                app:upSubtitle="@string/reminder_off_summary"
                app:upTitle="@string/reminder_off_title" />

            <!-- Series scopes: period and repetition. -->
            <LinearLayout
                android:id="@+id/period_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.Up.Section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_period" />

                <de.mcmodersd.unipensum.ui.widget.UpRow
                    android:id="@+id/from_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:upChevron="true"
                    app:upTitle="@string/field_from" />

                <de.mcmodersd.unipensum.ui.widget.UpRow
                    android:id="@+id/until_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_2"
                    app:upChevron="true"
                    app:upTitle="@string/field_until" />

                <TextView
                    style="@style/TextAppearance.Up.Section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_4"
                    android:text="@string/field_repeat" />

                <de.mcmodersd.unipensum.ui.widget.UpSegmentedControl
                    android:id="@+id/repeat_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <de.mcmodersd.unipensum.ui.widget.UpStepper
                    android:id="@+id/repeat_stepper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_2" />

                <TextView
                    android:id="@+id/schedule_error"
                    style="@style/TextAppearance.Up.Error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/space_1"
                    android:paddingTop="@dimen/space_2"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/schedule_note"
                    style="@style/TextAppearance.Up.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/space_1"
                    android:paddingTop="@dimen/space_2"
                    android:text="@string/warn_schedule_change"
                    android:visibility="gone" />
            </LinearLayout>

            <de.mcmodersd.unipensum.ui.widget.UpTextField
                android:id="@+id/note_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                app:upLabel="@string/field_note" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_4">

        <de.mcmodersd.unipensum.ui.widget.UpButton
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_save" />
    </LinearLayout>
</LinearLayout>
